<resources>
    <string name="app_name">Time Manager</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="empty_field">Пустое поле</string>
    <string name="fill_all_field">Заполните все поля</string>
    <string name="registration_completed_successfully">Регистрация прошла успешно</string>
    <string name="error_has_occurred">Произошла ошибка: \n%s</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="accept_edit">Подтвердить</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="my_profile">Мой профиль</string>
    <string name="create_new_profile">Создать новый профиль</string>
    <string name="my_balance">Мой баланс</string>
    <string name="register_new_profile">Регистрация нового пользователя</string>
    <string name="parent">Родитель</string>
    <string name="сhildren">Ребёнок</string>
    <string name="set_you_role">Выберите роль:</string>
    <string name="exit_profile">Выйти из профиля</string>
    <string name="my_tasks">Мои задачи</string>
    <string name="show_today">На сегодня</string>
    <string name="show_all">Все</string>
    <string name="my_children">Мои дети</string>
    <string name="show_qr_code">Показать QR-код</string>
    <string name="new_task">Новая задача</string>
    <string name="add_chldren">Добавить ребёнка</string>
    <string name="task_name">Название задачи</string>
    <string name="find_by_qr_code">Найти по QR-коду</string>
    <string name="find_by_login">Найти по логину</string>
    <string name="find_child">Найти ребёнка</string>
    <string name="filed_find">Пользователя с данным\nлогином и паролем не найдено\nили вы уже добавили этот профиль</string>
    <string name="child_added">Ребёнок добавлен</string>
    <string name="paren">Родитель</string>
    <string name="task">Задача</string>
    <string name="task_description">Описание задачи</string>
    <string name="urgency">Срочность</string>
    <string name="confirm">Подтвердить выполнение</string>
    <string name="invalid_password">Неверный пароль</string>
    <string name="task_not_completed">Задача не выполнена</string>
    <string name="status">Статус</string>
    <string name="task_open">Открыта</string>
    <string name="task_completed">Завершена</string>
    <string name="task_reject">Не принята</string>
    <string name="task_accept">Принята</string>
    <string name="state_task">Статус задачи</string>
    <string name="apply_changes">Применить изменения</string>
    <string name="edit_task">Редактировать задачу</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">Ок</string>
    <string name="confirmation_info">Вы действительно подтвердаете выполнение задачи?</string>
    <string name="confirmation">Подтверждение</string>
    <string name="time_range">%s - %s</string>
    <string name="deadline">Срок</string>
    <string name="completedAt">Выполнена</string>
    <string name="text_compete_task">Задача завершена, ожидайте подтверждения родителя</string>
    <string name="importance">Важность</string>
    <string name="begin_and_end_task">Начало и окончание задачи</string>

    <string name="task_date">Дата</string>
    <string name="task_time">Время</string>
    <string name="award">Награда</string>
    <string name="awards">Награды</string>
    <string name="add_award">Добавить награду</string>
    <string name="create_task">Создание задачи</string>
    <string name="get_award">Получить награду</string>
    <string name="for_you_work">Она за твои старания!</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="creating_award">Создание награды</string>
    <string name="price">Стоимость</string>
    <string name="award_successfully_created">Награда успешно создана</string>
    <string name="award_failed_created">При создани награды произошла ошибка\nпопробуйте позже</string>

    <string name="title_incorrect_start_end_data">Ошибка</string>
    <string name="info_incorrect_start_end_data">Введите корректные значения времени</string>
    <string name="info_incorrect_post_time">Время не может быть прошедшим</string>


    <string name="successfully">Успешно</string>
    <string name="error">Ошибка</string>
    <string name="successfully_created">Задача успешно создана</string>
    <string name="failed_created">Задача не создана, попробуйте позже</string>
    <string name="do_you_agree">Вы согласны?</string>
    <string name="attention">Внимание!</string>
    <string name="lack_off_fire">Недостаточно огоньков</string>
    <string name="already_received">Награда уже получена</string>
    <string name="my_awards">Мои награды</string>
    <string name="received">Получено:</string>
    <string name="users_rating">Рейтинг пользователей</string>
    <string name="qr_code">QR-код</string>
    <string name="really_get_out">Вы действительно хотите выйти?</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="need_add_child">Для создания задачи, небходимо добавить детей в профиль</string>
</resources>