<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:backgroundTint="@color/main"
    android:orientation="vertical"
    app:cardCornerRadius="24dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/manrope_bold"
                android:gravity="center_horizontal"
                android:text="@string/confirmation"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/confirmation_info"
                android:textAlignment="inherit"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/completed"
                    android:elevation="0dp"
                    android:fontFamily="@font/manrope_medium"
                    android:padding="15dp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="26dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/error"
                    android:elevation="0dp"
                    android:fontFamily="@font/manrope_medium"
                    android:padding="15dp"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="26dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</com.google.android.material.card.MaterialCardView>