<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/main"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    app:cardCornerRadius="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_by_qr_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_edit_text"
            android:elevation="0dp"
            android:fontFamily="@font/manrope_semi_bold"
            android:paddingVertical="10dp"
            android:textSize="18sp"
            android:text="@string/find_by_qr_code"
            android:textColor="@color/main"
            app:cornerRadius="26dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_by_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/background_edit_text"
            android:elevation="0dp"
            android:fontFamily="@font/manrope_semi_bold"
            android:paddingVertical="10dp"
            android:textSize="18sp"
            android:text="@string/find_by_login"
            android:textColor="@color/main"
            app:cornerRadius="26dp" />

        <LinearLayout
            android:id="@+id/linear_layout_find_by_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="26dp">

                <EditText
                    android:id="@+id/edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="13dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/manrope_medium"
                    android:hint="@string/login"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="4"
                    android:textColor="@color/main"
                    android:textColorHint="@color/gray_light" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/background_edit_text"
                android:elevation="0dp"
                android:fontFamily="@font/manrope_semi_bold"
                android:paddingVertical="10dp"
                android:text="@string/find_child"
                android:textColor="@color/main"
                android:textSize="18sp"
                app:cornerRadius="26dp" />
        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>