<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context=".ui.screens.profile.ProfileActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/my_profile"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="26dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_my_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_balance"
                    android:textSize="26sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textview_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_coin_fire"
                    android:drawablePadding="10dp"
                    android:maxLength="7"
                    android:text="1235621"
                    android:textAlignment="textEnd"
                    android:textColor="@color/score_text"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/textview_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:backgroundTint="@color/background_edit_text"
                android:enabled="false"
                android:hint="@string/first_name"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/base_black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/textview_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_edit_text"
                android:enabled="false"
                android:hint="@string/last_name"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/base_black"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_my_children"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                app:cornerRadius="26dp"
                android:elevation="0dp"
                android:text="@string/my_children"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:padding="15dp"
                app:cornerRadius="26dp"
                android:elevation="0dp"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_accept_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:padding="15dp"
                app:cornerRadius="26dp"
                android:elevation="0dp"
                android:text="@string/accept_edit"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="16sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:padding="15dp"
                app:cornerRadius="26dp"
                android:elevation="0dp"
                android:backgroundTint="@color/error"
                android:text="@string/exit_profile"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="4">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:src="@drawable/ic_list" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:src="@drawable/ic_profile" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:src="@drawable/ic_statistics" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_leader_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:src="@drawable/ic_leader_board" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>