<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingTop="150dp"
    tools:context=".ui.screens.authorization.AuthorizationActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:backgroundTint="@color/background_edit_text"
                android:elevation="0dp"
                app:cardCornerRadius="26dp"
                app:strokeColor="@color/main"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email" />

                    <EditText
                        android:autofillHints="emailAddress"
                        android:id="@+id/edit_text_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/main"
                        android:drawablePadding="10dp"
                        android:hint="@string/login"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        android:textSize="26sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_edit_text"
                android:elevation="0dp"
                app:cardCornerRadius="26dp"
                app:strokeColor="@color/main"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_password" />

                    <EditText
                        android:autofillHints="password"
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/main"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:textCursorDrawable="@drawable/edit_text_cursor"
                        android:textSize="26sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/button_registration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:lines="1"
                    android:paddingVertical="15dp"
                    android:text="@string/create_new_profile"
                    android:textColor="@color/main" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_authorization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:cornerRadius="26dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>